# nixos-druid

./: Cargo.toml  README.md  extract.nix  extractConfig.nix  flake.nix  testOption.nix  utilities.nix
nix-scripts/: extract.nix  extractConfig.nix  utilities.nix
src/: controller.rs  delegate.rs  lib.rs  main.rs  parse.rs  run.rs  tree_node.rs
src/data/: app_data.rs  documentation.rs  mod.rs
src/view/: mod.rs  opener.rs
